tests/machine/x/go/group_by_having.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_having.go:15:14: undefined: People
../../../tests/machine/x/go/group_by_having.go:16:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:20:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:24:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:28:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:32:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:36:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:40:3: undefined: People
../../../tests/machine/x/go/group_by_having.go:45:18: undefined: Big
../../../tests/machine/x/go/group_by_having.go:59:16: undefined: Big
../../../tests/machine/x/go/group_by_having.go:59:16: too many errors

1: //go:build ignore
