tests/machine/x/go/group_by_having.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T04:34:55Z

package main

import (
	"encoding/json"
	"fmt"
	"mochi/runtime/data"
)

func main() {
	people := []People{
		People{
			Name: "Alice",
			City: "Paris",
		},
		People{
			Name: "Bob",
			City: "Hanoi",
		},
		People{
			Name: "Charlie",
			City: "Paris",
		},
		People{
			Name: "Diana",
			City: "Hanoi",
		},
		People{
			Name: "Eve",
			City: "Paris",
		},
		People{
			Name: "Frank",
			City: "Hanoi",
		},
		People{
			Name: "George",
			City: "Paris",
		},
	}
	big := func() []Big {
		groups := map[string]*data.Group{}
		order := []string{}
		for _, p := range people {
			key := p.City
			ks := fmt.Sprint(key)
			g, ok := groups[ks]
			if !ok {
				g = &data.Group{Key: key}
				groups[ks] = g
				order = append(order, ks)
			}
			g.Items = append(g.Items, p)
		}
		results := []Big{}
		for _, ks := range order {
			g := groups[ks]
			if !(len(g.Items) >= 4) {
				continue
			}
			results = append(results, Big{
				City: (g.Key).(string),
				Num:  len(g.Items),
			})
		}
		return results
	}()
	func() { b, _ := json.Marshal(big); fmt.Println(string(b)) }()
}
